fixed css for text-align center on mobile view for about page

--- a/app/assets/stylesheets/components/_navbarshow.scss
+++ b/app/assets/stylesheets/components/_navbarshow.scss
@@ -52,13 +52,13 @@ input::-webkit-input-placeholder {
   color: white;
 }
 
-.trov-dropdown-menu {
+.dropdown-menu {
     padding-left: 10px;
     padding-right: 10px;
     width: 205px;
 }
 
-.open > .trov-dropdown-menu {
+.open > .dropdown-menu {
   display: block;
   position: absolute;
   z-index: 100100;
@@ -135,23 +135,6 @@ margin-bottom: 0px;
   height:60px;
   background-size:100%;
 }
-
-// strong, b {
-//     font-weight: 500 !important;
-//     font-family: 'Source Sans Pro';
-// }
-
-// a {
-//   color: white;
-//   text-decoration: none;
-//   font-weight: 500 !important;
-//   -o-transition:.5s;
-//   -ms-transition:.5s;
-//   -moz-transition:.5s;
-//   -webkit-transition:.5s;
-//   transition:.5s;
-//   text-shadow: 0px 1px rgba(0, 0, 0, 0.5);
-// }
 
 a:hover {
   color: #ff6c52;
